 - [web] fixed saving the note of a card (#3849)
 - [web] fixed support for recurrent tasks (#3864)
 - [web] restored support for alarms in tasks
 - [web] improved validation of mail account delegators
 - [web] fixed auto-completion of list members (#3870)
 - [web] added missing options to subscribed addressbooks (#3850)
 - [web] added missing options to subscribed calendars (#3863)
 - [web] fixed resource conflict error handling (403 vs 409 HTTP code)
 - [web] restored immediate deletion of messages (without moving them to the trash)
 - [web] avoid mail notifications on superfluous event changes (#3790)
 - [eas] improve handling of email folders without a parent
 - [eas] never send IMIP reply when the "initiator" is Outlook 2013/2016
 - [core] only consider SMTP addresses for AD's proxyAddresses (#3842)
 - [core] sogo-tool manage-eas now works with single store mode


3.2.0 (2016-10-03)
------------------

New features
 - [web] added IMAP folder subscriptions management (#255)
 - [web] keyboard hotkeys (#1711, #1467, #3817)
 - [eas] initial support for server-side mailbox search operations

Enhancements
 - [web] don't allow a recurrence rule to end before the first occurrence
 - [web] updated Angular Material to version 1.1.1
 - [web] show user's name upon successful login
 - [web] inserted unseen messages count and mailbox name in browser's window title
 - [web] disable JavaScript theme generation when SOGoUIxDebugEnabled is set to NO
 - [web] added Serbian (sr) translation - thanks to Bogdanović Bojan
 - [web] added sort by arrival date in Mail module (#708)
 - [web] restored "now" line in Calendar module
 - [web] updated CKEditor to version 4.5.11
 - [web] allow custom email address to be one of the user's profile (#3551)
 - [eas] propagate message submission errors to EAS clients (#3774) 

Bug fixes
 - [eas] properly generate the BusyStatus for normal events
 - [eas] properly escape all email and address fields
 - [eas] properly generate yearly rrule