@@ -25,9 +25,10 @@ Bug fixes
  - [web] fixed auto-completion of list members (#3870)
  - [web] added missing options to subscribed addressbooks (#3850)
  - [web] added missing options to subscribed calendars (#3863)
- - [web] fixed resource conflict error handling (403 vs 409 HTTP code)
+ - [web] fixed resource conflict error handling (403 vs 409 HTTP code) (#3837)
  - [web] restored immediate deletion of messages (without moving them to the trash)
  - [web] avoid mail notifications on superfluous event changes (#3790)
+ - [web] CKEditor: added the pastefromexcel plugin (#3854)
  - [eas] improve handling of email folders without a parent
  - [eas] never send IMIP reply when the "initiator" is Outlook 2013/2016
  - [core] only consider SMTP addresses for AD's proxyAddresses (#3842)
